--- a/project-01/Rangel_analysis_data_viz.html
+++ b/project-01/Rangel_analysis_data_viz.html
@@ -1753,7 +1753,7 @@ brand strength.</li>
 <h2>Loading data</h2>
 <pre class="r"><code>library(tidyverse)
 
-videogameSalesDataset = read_csv(&quot;https://github.com/aalhamadani/datasets/raw/refs/heads/main/video_game_sales.csv&quot;, col_types = cols())
+videogameSalesDataset = read_csv(&quot;../data/video_game_sales.csv&quot;, col_types = cols())
 
 videogameSalesDataset</code></pre>
 <div data-pagedtable="false">
